# lys-core

./: .clang-format  CMakeLists.txt  README.md
lys/: CMakeLists.txt  main.cpp  types.hpp
lys/sql/: CMakeLists.txt  converters.hpp  db.hpp  entry.hpp  execute.cpp  execute.hpp  helpers.hpp  insert.hpp  select.hpp  str_helpers.hpp  table.hpp  traits.hpp  types.hpp
lys/str/: CMakeLists.txt  convert.hpp  format.hpp  join.hpp  remove.hpp  repeat.hpp  replace.hpp  traits.hpp
lys/type/: CMakeLists.txt  attribute.hpp  chapter.hpp  character.hpp  event.hpp  party.hpp  scene.hpp
tests/: CMakeLists.txt
tests/sql/: test_table.cpp
